# ocpp-service

./: .dockerignore  .env.example  .gitignore  ARCH.MD  Cargo.toml  Dockerfile  FRONTEND_PROMPT.md  TODO.md  build.sh  docker-compose.yml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
deploy/: prometheus.yml
desktop/: .gitignore  Cargo.toml  index.html  package.json  pnpm-lock.yaml  tauri.conf.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
desktop/frontend/: index.html
desktop/src/: lib.rs  main.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  server.rs  tray.rs
desktop/src-ui/: index.css  main.tsx
desktop/src-ui/app/: App.tsx
desktop/src-ui/pages/: analytics.tsx  api-keys.tsx  charge-points.tsx  dashboard.tsx  id-tags.tsx  login.tsx  monitoring.tsx  settings.tsx  tariffs.tsx  transactions.tsx
desktop/src-ui/shared/: index.ts
desktop/src-ui/shared/api/: auth.ts  client.ts  tauri.ts
desktop/src-ui/shared/store/: auth-store.ts
desktop/src-ui/shared/ui/shadcn/: badge.tsx  dialog.tsx  form.tsx  sidebar.tsx
desktop/src-ui/widgets/: server-status-bar.tsx  sidebar.tsx
src/: config.rs  lib.rs  main.rs  server.rs
src/api/: mod.rs  router.rs
src/api/dto/: charge_point.rs  command.rs  common.rs  mod.rs  transaction.rs
src/api/handlers/: api_keys.rs  auth.rs  charge_points.rs  commands.rs  health.rs  id_tags.rs  mod.rs  monitoring.rs  tariffs.rs  transactions.rs
src/application/: mod.rs
src/application/charging/: mod.rs
src/application/charging/commands/: change_availability.rs  change_configuration.rs  data_transfer.rs  dispatcher.rs  get_configuration.rs  mod.rs  remote_start.rs  remote_stop.rs  trigger_message.rs  unlock_connector.rs
src/application/charging/handlers/: ocpp_v16_handler.rs  ocpp_v201_handler.rs
src/application/charging/services/: billing.rs  charge_point.rs  device_report.rs  heartbeat_monitor.rs  mod.rs  reservation_expiry.rs
src/application/charging/session/: connection.rs  mod.rs  registry.rs
src/application/commands/: change_availability.rs  change_configuration.rs  clear_cache.rs  data_transfer.rs  get_configuration.rs  get_local_list_version.rs  mod.rs  remote_start.rs  remote_stop.rs  reset.rs  trigger_message.rs  unlock_connector.rs
src/application/dto/: command.rs  transaction.rs
src/application/events/: event_bus.rs  mod.rs  types.rs
src/application/handlers/: mod.rs  ocpp_handler.rs  ocpp_v16_handler.rs  ocpp_v201_handler.rs
src/application/handlers/ocpp/: handle_authorize.rs  handle_boot_notification.rs  handle_data_transfer.rs  handle_diagnostics_status_notification.rs  handle_firmware_status_notification.rs  handle_heartbeat.rs  handle_meter_values.rs  handle_security_event_notification.rs  handle_start_transaction.rs  handle_status_notification.rs  handle_stop_transaction.rs  mod.rs
src/application/handlers/ocpp_v16/: handle_authorize.rs  handle_boot_notification.rs  handle_data_transfer.rs  handle_diagnostics_status_notification.rs  handle_heartbeat.rs  handle_meter_values.rs  handle_security_event_notification.rs  handle_start_transaction.rs  handle_status_notification.rs  handle_stop_transaction.rs  mod.rs
src/application/handlers/ocpp_v201/: handle_authorize.rs  handle_boot_notification.rs  handle_data_transfer.rs  handle_firmware_status_notification.rs  handle_heartbeat.rs  handle_meter_values.rs  handle_security_event_notification.rs  handle_status_notification.rs  handle_transaction_event.rs  mod.rs
src/application/identity/: mod.rs  queries.rs  service.rs
src/application/ports/: inbound.rs  mod.rs  outbound.rs
src/application/services/: billing.rs  charge_point.rs  heartbeat_monitor.rs  mod.rs
src/application/session/: connection.rs  mod.rs  registry.rs
src/auth/: api_key.rs  jwt.rs  middleware.rs  mod.rs  password.rs
src/domain/: charge_point.rs  error.rs  mod.rs  tariff.rs  transaction.rs
src/domain/charge_point/: mod.rs  model.rs  repository.rs
src/domain/charging_profile/: mod.rs  model.rs  repository.rs
src/domain/events/: mod.rs  types.rs
src/domain/id_tag/: mod.rs  model.rs  repository.rs
src/domain/models/: api_key.rs  charge_point.rs  id_tag.rs  mod.rs  ocpp_version.rs  user.rs
src/domain/ocpp/: api_key.rs  mod.rs
src/domain/ports/: inbound.rs  mod.rs
src/domain/repositories/: mod.rs
src/domain/reservation/: mod.rs  model.rs  repository.rs
src/domain/services/: mod.rs
src/domain/tariff/: mod.rs  model.rs  repository.rs
src/domain/transaction/: mod.rs  model.rs  repository.rs
src/domain/user/: dto_change_password.rs  dto_create.rs  dto_get.rs  dto_update.rs  mod.rs  repository.rs
src/infrastructure/: mod.rs
src/infrastructure/crypto/: api_key.rs  jwt.rs  mod.rs  password.rs
src/infrastructure/database/: mod.rs  storage.rs
src/infrastructure/database/entities/: api_key.rs  charge_point.rs  charging_profile.rs  connector.rs  id_tag.rs  mod.rs  reservation.rs  tariff.rs  transaction.rs  user.rs
src/infrastructure/database/migrator/: m20240101_000001_create_charge_points.rs  m20240101_000002_create_connectors.rs  m20240101_000003_create_transactions.rs  m20240101_000004_create_users.rs  m20240101_000005_create_api_keys.rs  m20240101_000006_create_id_tags.rs  (+9 more)
src/infrastructure/server/: mod.rs  shutdown.rs  websocket.rs
src/infrastructure/storage/: memory.rs  mod.rs  traits.rs
src/interfaces/: mod.rs
src/interfaces/grpc/: mod.rs
src/interfaces/http/: middleware.rs  mod.rs  router.rs
src/interfaces/ws/: mod.rs  negotiator.rs  notifications.rs  ocpp_server.rs
src/notifications/: event_bus.rs  events.rs  mod.rs  websocket.rs
src/session/: connection.rs  manager.rs  mod.rs
src/shared/: mod.rs  shutdown.rs
src/shared/types/: errors.rs  mod.rs  ocpp_frame.rs  pagination.rs
src/shared/utills/: mod.rs  retry.rs
src/shared/validations/: mod.rs
src/support/: errors.rs  mod.rs  ocpp_frame.rs  shutdown.rs  time.rs  validations.rs
web/: index.html
web/assets/js/: api.js  app.js  router.js  ws.js
(+146 files in other folders)
