[package]
name = "ocpp-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "texnouz_ocpp"
path = "src/lib.rs"

[[bin]]
name = "ocpp-service"
path = "src/main.rs"

[dependencies]
ocpp_rs = "0.2.5"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
thiserror = "1.0"

# Database - SeaORM with SQLite (easily switchable to PostgreSQL)
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",      # SQLite driver
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

# REST API
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
tracing = "0.1"

# Swagger/OpenAPI documentation
utoipa = { version = "4", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.16"
rand = "0.8"
hex = "0.4"
