[workspace]
members = ["cli", "desktop/src-tauri"]

[package]
name = "csms-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "texnouz_csms"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
thiserror = "1.0"

# Database - SeaORM with SQLite (easily switchable to PostgreSQL)
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",      # SQLite driver
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }

# REST API
axum = { version = "0.8.8", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Swagger/OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# Authentication
jsonwebtoken = "9"
bcrypt = "0.16"
base64 = "0.22"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"

# Configuration
toml = "0.8"
dirs-next = "2.0"
rust-ocpp = { version = "3.0.4", features = ["v1_6", "v2_0_1"] }
rust_decimal = "1"

# Rate limiting
tower_governor = { version = "0.8", features = ["axum", "tracing"] }

# Metrics / Prometheus
# Disable default features to avoid pulling in hyper-rustls → aws-lc-rs
# which requires NASM + cmake on Windows.
# Only http-listener is needed (no push-gateway).
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }


