[package]
name = "ocpp-desktop"
version = "0.1.0"
edition = "2021"
description = "Texnouz OCPP Desktop — System tray & settings (Tauri)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

# Reference the main library crate
texnouz_ocpp = { path = "..", package = "ocpp-service" }
