[package]
name = "csms-desktop"
version = "0.1.0"
edition = "2021"
description = "Texnouz CSMS Desktop — System tray, embedded CSMS & management dashboard (Tauri)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

# Async runtime (shared with the embedded CSMS server)
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Reference the main library crate
texnouz_csms = { path = "../..", package = "csms-service" }
